--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
 		<button id="oldySite" style= "display: none">
 			<a href="oldy.html">&nbsp Старая версия сайта &nbsp</a><img src="favicon.ico">&nbsp
 		</button>
-		<button id="theWar" >
-			<!-- <a href="./#P2022-10-07/000">&nbsp Украина - ЛИНИЯ ФРОНТА &nbsp </a> -->
+		<!--<button id="theWar" >
+			
 			&nbsp Украина - ЛИНИЯ ФРОНТА &nbsp 
-		</button>
+		</button>-->
 
 		<!-- <div id="covidno" onclick = "coronaLoco()"><span style = "color: Red" >NEW !!!<span> -->
 			<!-- <a href="covid/index.html"> Коронавирус<br>Только на этом сайте :<br> -->
